--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
-title: 读立写生
-header-img: "img/green.jpg"
+title: 自由基
+header-img: "img/zhihu.jpg"
 tagline: "cn"  
-description: "陈素封|读而立·写而生"  
+description: "One of a kind."  
 baseurl: ""
-url: "http://cnfeat"  
+url: "http://corshy.com"  
 
 # About/contact
 owner: 
-  name: " CnFeat"
-  email: CnFeat@gmail.com
-  bio: "写就是写的报酬"
+  name: " Jerry Cai"
+  email: qcai1996@gmail.com
+  bio: "One of a kind."
 
 # Data
 gavatar: http://dreamofbook.qiniudn.com/Az..png
@@ -43,8 +43,8 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      author: "CnFeat"
-      header-img: "img/green.jpg" # We don't want posts without a header image, that whould mean white on white
+      author: "Jerry Cai"
+      header-img: "img/zhihu.jpg" # We don't want posts without a header image, that whould mean white on white
 
 # Comments 
 comments :
